Arreglos finales de la documentacion api y test nuevos
